--- a/index.html
+++ b/index.html
@@ -1,66 +1,235 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Linktree personal para redirigirme a mis trabajos y redes sociales">
-  <meta name="theme-color" content="#0f0f12">
-  <title>Mi Linktree</title>
-
-  <!-- Fuente (opcional) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-
+  <title>Blog Home</title>
+  <link rel="icon" type="image/png" href="img/LOGOPESTAÑA.png">
+  <link rel="apple-touch-icon" href="img/LOGOPESTAÑA.png">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <main class="wrap" role="main">
-    <header>
-      <!-- Cambia la ruta al archivo real dentro de /perfil -->
-      <img class="avatar" src="img/perfil.jfif" alt="Foto de perfil" width="96" height="96">
-      <h1>Mariano Erbino</h1>
-      <p class="subtitle">Bienvenido a mi Linktree</p>
-    </header>
-
-    <nav class="links" aria-label="Enlaces principales">
-      <a class="btn" href="../ErbinoIdentikit/index.html" target="_blank" rel="noopener noreferrer">Identikit</a>
-      <a class="btn" href="../ErbinoBlog/index.html" target="_blank" rel="noopener noreferrer">Blog</a>
-      <a class="btn" href="#" target="_blank" rel="noopener noreferrer">Trabajo Integrador</a>
-      <a class="btn" href="#" target="_blank" rel="noopener noreferrer">Contacto</a>
-    </nav>
-
-    <div class="socials" aria-label="Redes sociales">
-      <!-- Instagram -->
-      <a class="icon-btn" aria-label="Instagram" href="https://instagram.com/TU_USUARIO" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false">
-          <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3a6 6 0 1 1 0 12 6 6 0 0 1 0-12zm0 2.2a3.8 3.8 0 1 0 0 7.6 3.8 3.8 0 0 0 0-7.6zM18.5 6.5a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5z"/>
-        </svg>
-      </a>
-
-      <!-- LinkedIn -->
-      <a class="icon-btn" aria-label="LinkedIn" href="https://www.linkedin.com/in/TU_USUARIO" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false">
-          <path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5S0 4.881 0 3.5 1.11 1 2.5 1s2.48 1.119 2.48 2.5zM0 24h5V7H0v17zM8 24h5v-9c0-2.485 3-2.687 3 0v9h5V13.5c0-6.327-6.037-6.095-8-2.984V7H8v17z"/>
-        </svg>
-      </a>
-
-      <!-- WhatsApp (usa tu número sin + ni espacios) -->
-      <a class="icon-btn" aria-label="WhatsApp" href="https://wa.me/549XXXXXXXXXX?text=Hola%20%F0%9F%91%8B%20vengo%20de%20tu%20Linktree" target="_blank" rel="noopener noreferrer">
-        <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" focusable="false">
-          <path d="M20.52 3.48A11.86 11.86 0 0 0 12.04 0C5.46 0 .12 5.34.12 11.92c0 2.1.55 4.16 1.59 5.98L0 24l6.27-1.64a11.9 11.9 0 0 0 5.77 1.48h.01c6.58 0 11.93-5.34 11.93-11.92a11.86 11.86 0 0 0-3.46-8.44zM12.05 21.3h-.01a9.4 9.4 0 0 1-4.79-1.31l-.34-.2-3.73.98 1-3.63-.22-.35a9.37 9.37 0 0 1-1.45-5.02c0-5.18 4.22-9.39 9.41-9.39a9.3 9.3 0 0 1 6.61 2.73 9.3 9.3 0 0 1 2.74 6.6c0 5.18-4.22 9.39-9.41 9.39zm5.37-7.01c-.3-.15-1.78-.88-2.06-.98-.27-.1-.47-.15-.68.15-.2.3-.78.98-.95 1.18-.17.2-.36.23-.66.08-.3-.15-1.28-.47-2.44-1.5a9.02 9.02 0 0 1-1.67-2.05c-.17-.3-.02-.46.13-.61.13-.13.3-.36.45-.54.15-.18.2-.3.3-.5.1-.2.05-.38-.03-.53-.08-.15-.68-1.63-.93-2.24-.24-.58-.5-.5-.68-.5h-.58c-.2 0-.52.08-.8.38-.27.3-1.05 1.03-1.05 2.5s1.08 2.9 1.23 3.1c.15.2 2.12 3.23 5.14 4.54.72.31 1.28.5 1.72.64.72.23 1.38.2 1.9.12.58-.09 1.78-.73 2.03-1.44.25-.72.25-1.34.17-1.48-.08-.14-.27-.22-.57-.37z"/>
-        </svg>
-      </a>
+  <header>
+    <div class="top">
+      <marquee><a href="subscribe.html">SUSCRIBITE</a> para recibir un e-book de programación gratis →</marquee>
     </div>
+  </header>
 
-    <footer>
-      <small>© <span id="year"></span> Tu Nombre</small>
-    </footer>
-  </main>
+  <nav class="nav aurora-menu">
+    <button class="menu-toggle" aria-controls="menu" aria-expanded="false" aria-label="Abrir menú">
+      <span></span><span></span><span></span>
+    </button>
+    <ul id="menu">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="ArticulosHome.html">Artículos</a></li>
+      <li><a href="sobremi.html">E-COMMERCE</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+    </ul>
+  </nav>
 
+  <div class="principal">
+    <div class="contenido" style="background-color:#03363a">
+      <!-- COMIENZO DEL ARTÍCULO -->
+      <div class="articulo">
+        <h1>Importancia de los suplementos en el rendimiento y la salud</h1>
+        <p class="fecha">Publicado por <a href="autores.html">Erbino Mariano</a> el <a
+            href="calendario.html"> 20 de Octubre de 2024</a></p>
+        <img src="img/SUPLEMENTOS.webp" alt="Portada" class="portada">
+        <p class="bajada">Los suplementos son herramientas, no atajos. Funcionan cuando hay plan: comer bien, entrenar
+          inteligente y dormir suficiente.</p>
+        <a href="articulo1.html" class="continuar">Continuar leyendo</a>
+        <hr>
+      </div>
+      <!-- FIN DEL ARTÍCULO -->
+      <!-- COMIENZO DEL ARTÍCULO -->
+      <div class="articulo">
+        <h1>Combinar o no combinar: curiosidades al mezclar creatina y BCAA</h1>
+        <p class="fecha">Publicado por <a href="sobremi.html">Mariano Erbino</a> el <a href="+">20 de Octubre.</a>
+        </p>
+        <img src="img/BCAA.jpg" alt="Portada" class="portada">
+        <p class="bajada">Investigación prospectiva, aleatorizada y doble ciego que evalúa durante 12 semanas el impacto
+          de 3–5 g/día de creatina monohidratada vs. placebo en adultos que realizan entrenamiento de fuerza.</p>
+        <a href="articulo2.html" class="continuar">Continuar leyendo</a>
+      </div>
+      <!-- FIN DEL ARTÍCULO -->
+      <!-- COMIENZO DEL ARTÍCULO -->
+      <div class="articulo">
+        <h1>Proteína después de los 50: la clave para fuerza y autonomía</h1>
+        <p class="fecha">Publicado por <a href="sobremi.html">Mariano Erbino</a> el <a href="+">20 de Octubre.</a>
+        </p>
+        <img src="img/PROTE.webp" alt="Portada" class="portada">
+        <p class="bajada">Los suplementos son herramientas, no atajos. Funcionan cuando hay plan: comer bien, entrenar
+          inteligente y dormir suficiente.</p>
+        <a href="articulo3.html" class="continuar">Continuar leyendo</a>
+      </div>
+      <!-- FIN DEL ARTÍCULO -->
+      <!-- COMIENZO DEL ARTÍCULO -->
+      <div class="articulo">
+        <h1>Más fuerte, más vida: la ciencia detrás del entrenamiento de fuerza</h1>
+        <p class="fecha">Publicado por <a href="sobremi.html">Mariano Erbino</a> el <a href="+">20 de Octubre.</a>
+        </p>
+        <img src="img/ENTRENAR.jpg" alt="Portada" class="portada">
+        <p class="bajada">Los suplementos son herramientas, no atajos. Funcionan cuando hay plan: comer bien, entrenar
+          inteligente y dormir suficiente.</p>
+        <a href="articulo4.html" class="continuar">Continuar leyendo</a>
+      </div>
+      <!-- FIN DEL ARTÍCULO -->
+
+    </div><!--
+    --><div class="aside">
+      <div class="avatar">
+        <h3 class="avatar-title">Hola, soy Marian🏋🏽🙌🏽</h3>
+        <img src="img/YO.jpeg" alt="pregunta">
+      </div>
+      <div class="separador">&nbsp;</div>
+      <p>Mi pasión por los suplementos nació en el gimnasio y creció investigando a fondo qué funciona y por qué. Me
+        encanta traducir la ciencia en hábitos simples: elegir bien, dosificar mejor y medir resultados. No vendo
+        “fórmulas mágicas”: acompaño procesos reales, con productos confiables, constancia y educación para que cada
+        persona vea progreso de verdad.</p>
+      <h2 style="margin-left: -2px;">¡HABLEMOS!</h2>
+      <ul>
+        <li><button><a href="https://share.google/31DyGnRYacSmL5MJ2" id="botones"><img class="redes"
+              src="https://img.icons8.com/?size=100&id=uw5dRncAbjq9&format=png&color=000000" alt="1"></a></button>
+        </li>
+        <li><button><a href="https://github.com/JuanFortez/Coldplay/blob/main/index.html" id="botones"><img
+              class="redes" src="https://img.icons8.com/?size=100&id=zuHqpgzrusU5&format=png&color=000000"
+              alt="1"></a></button></li>
+        <li><button><a href="https://www.linkedin.com/in/chiara-giralt/" id="botones"><img class="redes"
+              src="https://img.icons8.com/?size=100&id=BRElTmOLC6Bh&format=png&color=000000" alt="1"></a></button>
+        </li>
+      </ul>
+      <div class="sub">
+        <h2>¡SUSCRÍBETE!</h2>
+        <p>Te estamos escribiendo en breve</p>
+        <form class="sub-form">
+          <input class="continuar-input" type="email" name="email" placeholder="tucorreo@gmail.com" />
+          <button type="submit" class="continuar">Enviar</button>
+        </form>
+      </div>
+
+      <div class="proyecto">
+        <h2 style="margin-left: -2px;">¿Sabías que...?</h2>
+        <div class="miniatura">
+          <h4 style="font-size: 16px;" class="texto-container">
+            <p>El mundo de los suplementos está en plena expansión: deportistas, personas activas y quienes buscan
+              bienestar requieren guías confiables para elegir, dosificar y combinar productos con seguridad</p>
+          </h4>
+          <img src="img/CONSULTA.jfif" alt="pregunta">
+        </div>
+      </div>
+      <div class="proyecto">
+        <h2 style="margin-left: -2px;">SUPLEMENTOS E-COMMERCE</h2>
+        <div class="miniatura">
+          <h4 style="font-size: 16px;" class="texto-container">
+            <p>En QuilGym te guiamos para elegir lo que realmente te sirve: calidad verificada, dosis claras y
+              resultados💯💪🏽</p>
+          </h4>
+          <img src="img/LOGO.jpeg" alt="pregunta">
+          <a href="#" class="continuar">COMPRAR</a>
+        </div>
+      </div>
+      <div class="proyecto">
+        <h2 style="margin-left: -2px;">SPORTCLUB</h2>
+        <div class="miniatura">
+          <h4 style="font-size: 16px;" class="texto-container">
+            <p>Activá tu pase SportClub con 20% OFF y sumate a clases, musculación y cardio💯💪🏽</p>
+          </h4>
+          <img src="img/SPORTCLUB.png" alt="pregunta">
+          <a href="#" class="continuar">INSCRIBITE</a>
+        </div>
+      </div>
+      <div class="proyecto">
+        <h2 style="margin-left: -2px;">PUBLICIDAD</h2>
+        <div class="miniatura">
+          <h4 style="font-size: 16px;" class="texto-container">
+            <p>Sumate a MEGATROL con 2×1 si te inscribís con un amigo.💯💪🏽</p>
+          </h4>
+          <img src="img/MEGA.jpg" alt="pregunta">
+          <a href="#" class="continuar">INSCRIBITE</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- botón "volver arriba" (centrado en pantalla) -->
+  <button id="btn-up" aria-label="Volver arriba" title="Volver arriba">▲ Volver arriba</button>
+
+  <!-- reemplazado: footer unificado con el mismo markup que en las otras páginas -->
+  <footer>
+    <ul id="menu-footer">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="ArticulosHome.html">Artículos</a></li>
+      <li><a href="sobremi.html">E-COMMERCE</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="subscribe.html">Suscríbete</a></li>
+    </ul>
+
+    <address class="footer-contact">
+      <span>Celular: <a href="tel:1126762031">1126762031</a></span>
+      <span>Email: <a href="mailto:Marianoerbino@gmail.com">Marianoerbino@gmail.com</a></span>
+    </address>
+
+    <p>&copy; 2025 Mariano Erbino</p>
+  </footer>
+
+  <!-- Script: posicionar el botón fijo y desplazarlo automáticamente por encima del footer -->
   <script>
-    // Año del footer
-    document.getElementById('year').textContent = new Date().getFullYear();
+    (function () {
+      const btn = document.getElementById('btn-up');
+      const footer = document.querySelector('footer');
+      if (!btn || !footer) return;
+      const baseBottom = 24; // px cuando el footer no está visible
+      const marginAboveFooter = 16; // espacio entre footer y botón
+
+      function updatePosition() {
+        const fRect = footer.getBoundingClientRect();
+        const overlap = Math.max(0, window.innerHeight - fRect.top);
+        btn.style.bottom = (overlap > 0) ? (overlap + marginAboveFooter) + 'px' : baseBottom + 'px';
+        btn.classList.toggle('visible', window.scrollY > 200);
+      }
+
+      window.addEventListener('scroll', updatePosition, { passive: true });
+      window.addEventListener('resize', updatePosition);
+      updatePosition();
+
+      btn.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
+    })();
   </script>
+  <!-- Script para abrir/cerrar el menú hamburguesa -->
+  <script>
+    (function () {
+      const nav = document.querySelector('.aurora-menu');
+      if (!nav) return;
+      const toggle = nav.querySelector('.menu-toggle');
+      const menu = nav.querySelector('#menu');
+      if (!toggle || !menu) return;
+
+      function setExpanded(val) {
+        toggle.setAttribute('aria-expanded', String(val));
+        nav.classList.toggle('is-open', val);
+        document.body.classList.toggle('menu-open', val);
+      }
+
+      toggle.addEventListener('click', function () {
+        const opened = nav.classList.contains('is-open');
+        setExpanded(!opened);
+      });
+
+      // cerrar menú al hacer click en un enlace (mobile)
+      menu.addEventListener('click', function (e) {
+        if (e.target.tagName === 'A') setExpanded(false);
+      });
+
+      // cerrar con Escape
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape') setExpanded(false);
+      });
+    })();
+  </script>
+  <script src="scripts/avatarColors.js"></script>
+  <script src="scripts/inscribir.js"></script>
 </body>
+
 </html>
